# MySekaiStorywriter

./: .gitignore  MySekaiStorywriter.py  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  _components.py  _resources_rc.py  _snippets.py  _views.py  _window.py  data_model.py  server.py  snippets.py  utils.py  window.py
app/components/: __init__.py  _collapsible_property_card.py  _downloading_flyout.py  _image_display.py  _input_metadata_message_box.py  _live2d_widget.py  _my_splash_screen.py  _save_file_message_box.py  _snippet_properties_widget.py  _snippet_property_input_widget.py  _voice_property.py
app/views/: __init__.py  _data_view.py  _main_view.py
scripts/: build-win.ps1
